# WCSim

./: .gitignore  .travis.yml  20151117novis_momentum.mac  20151117novis_momentum.mac~  20151117novis_momentum_fail.mac~  20151117wcsim.root  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.build  Dockerfile.cmake  G4ROOTsource.sh  GNUmakefile  GNUmakefile_full  GNUmakefile_root  LC_README  LC_extravar.txt  LICENSE  Makefile  NuPRISM.mac  Nuance_MC_Format.txt  OD.mac  README  README.ROOT  README.md  RELEASENOTES.md  Readme_features.txt  SetupGitHub.sh  WCSim.cc  WCSim.mac  WCSimConfig.cmake.in  WCSim_ALC.cc  WCSim__hyperk__noID__OD__10k_PMTs__dark_rate_400Hz__cosmic_muons__notrigger__2microsec__10events.mac  WCSim_doxygen_config  WCSim_hybrid.mac  WCSim_hybrid.sh  WCSim_hybrid_vectorfile.mac  _analyze_w_s_hierarchy_8c.html  _analyze_w_s_hierarchy_8c__incl.map  _analyze_w_s_hierarchy_8c__incl.md5  (+2968 more)
HKComputing/: Create1TeVUpMuJobs.py  CreateCosmicsJobs.py  CreateGammaTyvekJobs.py  CreateTyvekJobs.py  HKODWCSimMacro.py  HKWCSimJobs.py  HKWCSimMacro.py  QMULCluster.cfg
HyperKODComputing/: CreateJobs.py  CreateMacro.py  SubmitJobs.py
aScripts/: 20151117novis_momentum.mac
analysis/: readme_draw.txt  viewlc.mac  viewwls.mac  viewwlsp.mac
cmake/: PackageBuilder.cmake  PackageBuilderMacros.cmake  WCSimConfig.cmake.in  WCSimRootConfig.cmake.in  this_wcsim.sh.in
code/: WCSimConstructCylinder.cc  WCSimConstructGeometryTables.cc  WCSimConstructHyperK.cc  WCSimConstructMaterials.cc  WCSimConstructPMT.cc  WCSimDarkRateMessenger.cc  WCSimDarkRateMessenger.hh  WCSimDetectorConfigs.cc  WCSimDetectorConstruction.cc  WCSimDetectorConstruction.hh  WCSimDetectorMessenger.cc  WCSimDetectorMessenger.hh  WCSimEventAction.cc  WCSimEventAction.hh  WCSimPMTObject.cc  WCSimPMTObject.hh  WCSimPMTQE.cc  WCSimPhysicsList.cc  WCSimPhysicsList.hh  WCSimPhysicsListFactory.cc  WCSimPhysicsListFactory.hh  WCSimPhysicsListFactoryMessenger.cc  WCSimPhysicsListFactoryMessenger.hh  WCSimPhysicsMessenger.cc  WCSimPhysicsMessenger.hh  WCSimPmtInfo.cc  WCSimPmtInfo.hh  WCSimPrimaryGeneratorAction.cc  WCSimPrimaryGeneratorAction.hh  WCSimPrimaryGeneratorMessenger.cc  WCSimPrimaryGeneratorMessenger.hh  WCSimRandomMessenger.cc  WCSimRandomMessenger.hh  WCSimRandomParameters.hh  WCSimRootEvent.cc  WCSimRootEvent.hh  WCSimRootGeom.cc  WCSimRootGeom.hh  WCSimRootLinkDef.hh  WCSimRunAction.cc  (+34 more)
config/: ODFP-example.json
data/: CathodeParameters.txt  CathodeParameters_KCsCb.txt  CathodeParameters_RbCsCb.txt  CathodeParameters_SK.txt  DSNBFluxes.json  LightInjectors.json  first_excited_spectrum.txt  ground_state_spectrum.txt  mPMT_Position_IWCD_OptionA.txt  mPMT_Position_IWCD_OptionC.txt  mPMT_Position_WCTE.txt  mPMT_Position_WCTE_CDS.txt  nakazato_nh_min.txt  resampled_nSpectrum.txt  second_excited_spectrum.txt  theta_cos15deg_FWHM.txt
doc/: CathodeParameterFormat.md  Makefile  Nuance_MC_Format.md  Nuance_MC_Format.txt  README  README_WCTE.txt  WCSim_doxygen_config
include/: #WCSimGenerator_Radioactivity.hh#  G4MultiUnion_v1051.hh  G4MultiUnion_v1072.hh  G4Voxelizer_v1051.hh  G4Voxelizer_v1072.hh  GdCaptureGammas.hh  GdNeutronHPCapture.hh  GdNeutronHPCaptureFS.hh  RnModel_Fit_Params.hh  RnModel_Fit_Params_20200922.hh  TJNuBeamFlux.hh  TNRooTrackerVtx.hh  WCSimAbstractDigitizer.hh  WCSimAmBeGen.hh  WCSimDaqChannel.hh  WCSimDarkRateMessenger.hh  WCSimDetectorConstruction.hh  WCSimDetectorMessenger.hh  WCSimEnumerations.hh  WCSimEventAction.hh  WCSimGenerator_Radioactivity.hh  WCSimIBDGen.hh  WCSimIntervalList.hh  WCSimLBNEDigitizer.hh  WCSimLC.hh  WCSimLIGen.hh  WCSimMultiPMTParameterisation.hh  WCSimNuHepMC3Reader.hh  WCSimOpBoundaryProcess.hh  WCSimOpticalPhotonMessenger.hh  WCSimOpticalPhotonTrackInfo.hh  WCSimOpticalPhysics.hh  WCSimOpticalPhysicsMessenger.hh  WCSimPMTObject.hh  WCSimPhysicsList.hh  WCSimPhysicsListFactory.hh  WCSimPhysicsListFactoryMessenger.hh  WCSimPhysicsMessenger.hh  WCSimPmtInfo.hh  WCSimPmtPulse.hh  (+43 more)
input_mac/: 20151117novis_momentum.mac  20151117novis_momentum.mac~
mPMT-configfiles/: WCTE_mPMT_mapping.txt  mPMTconfig_19_nuPrism.txt  mPMTconfig_19_nuPrism_3ring.txt  mPMTconfig_19_nuPrism_3ring_WCTE.txt  mPMTconfig_30_13_3.txt  mPMTconfig_33_13_1.txt  mPMTconfig_33_50.txt  mPMTconfig_33_50_1.txt  mPMTconfig_34_22.5_1.txt  mPMTconfig_34_22.5_2.txt  mPMTconfig_34_22_1.txt  mPMTconfig_34_22_2.txt  mPMTconfig_37_HK.txt  mPMTconfig_Position_WCTE.txt  mPMTconfig_Position_WCTE_RotateBarrelHalfTower.txt
macros/: LIGen.mac  NuPRISM.mac  OD.mac  OD_10k.mac  OD__10k_OD_PMTs__no_ID__no_dark_noise__1_GeV_horizontal_muon.mac  WCSim_1part_HK.mac  WCSim_IBD_Template.mac  WCSim__hyperk__noID__OD__2700top_0barrel_2700bottom_PMTs__dark_rate_400Hz__cosmic_muons__notrigger__2microsec.mac  WCSim__hyperk__noID__OD__4ktop_0barrel_1kbottom_PMTs__dark_rate_400Hz__cosmic_muons__notrigger__2microsec.mac  WCSim__hyperk__noID__OD__5k_homogeneous_PMTs__dark_rate_400Hz__cosmic_muons__notrigger__2microsec.mac  WCSim__hyperk__noID__OD__5ktop_0barrel_0bottom_PMTs__dark_rate_400Hz__cosmic_muons__notrigger__2microsec.mac  WCSim_hybrid_injector.mac  WCSim_hybrid_vectorfile.mac  WCTE.mac  daq.mac  geom_hk_mpmt_options.mac  geom_hk_od_options.mac  jobOptions.mac  jobOptions2.mac  mPMT_37pmtHK.mac  mPMT_interesting1.mac  mPMT_interesting2_SKwCover.mac  mPMT_nuPrism.mac  mPMT_nuPrism1.mac  mPMT_nuPrism2.mac  mPMT_radon_with_bias.mac  mPMT_radon_without_bias.mac  nuPRISMBeamTest.mac  tuning_parameters.mac  visOGLQT-OD.mac  visOGLQT.mac  visOGLQt.mac  visOGLSX.mac  visRayTracer.mac  wcsim_temp.mac
new_display/: MCEvent.cc  MCEvent.h  Makefile  README  WCMapDict.cc  WCMapDict.h  WCMapLinkDef.h  Xin_Draw.cc  Xin_Draw.h  event_display.C  geofile.txt  plot.C  rootlogon.C  temp.root
root-scripts/: 20151117PMT_Time_Momentum.C  PMT_Momentum.C  PMT_Momentum_copy.C  PMT_Time_Momentum.C~  read_PMT.C  subevents.C~
rootwc/: loadincs.C  loadlibs.C  rootwc  rootwc.C
sample-root-scripts/: .gitignore  20151117PMT_Time_Momentum.C~  AnalyzeWSHierarchy.c  Analyzer.sh  Event.cxx  Event.h  EventLinkDef.h  HKPMT_LIST.list  KinSplitter.py  (+41 more)
(+492 files in other folders)
